# azure-notes

./: README.md
diagrams/: Azure_As_is.gv  RelOps_as_is.gv
log_scripts/: log-relay  pyproject.toml
