[tool.poetry]
name = "log_scripts"
version = "0.1.1"
description = "Scripts for Azure to GCP transfer"
authors = ["Hal Wine <hwine@mozilla.com>"]
license = "mpl-2.0"

[tool.poetry.dependencies]
python = "^3.6"
google-cloud-logging = "^1.15"
azure-eventhub = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
